docs/tests/typing/bad/testfile-class-1.cpp
class S { public: S a; };
